--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -10,7 +10,7 @@
 </div>
 <div class="level-right">
     <div class="level-item">
-        v <%- version %> 
+        Beta v <%- version %> 
     </div>
 </div>
 
