--- a/views/home.ejs
+++ b/views/home.ejs
@@ -66,14 +66,21 @@
                   </div>
                   <div class="container" id="content"><!-- upload form -->
                         <form class="form" onSubmit="">
-    
+                            
                             <div class="field">
                                 <label class="label">Discord Name </label>
                                 <div class="control">
                                   <input class="input" type="text" placeholder="Discord" style="width: 33%;" id="discordId" required>
                                 </div>
                               </div>
-
+                              <div class="field">
+                                <div class="control">
+                                  <label class="checkbox">
+                                    <input type="checkbox" id='termsCheck' required>
+                                    Do not include my discord as a contributor.
+                                  </label>
+                                </div>
+                              </div>
                               
                               <div class="field">
                                 <div class="control">
