validation form stuff

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,7 +44,7 @@
         <div class="modal-card">
 
         </div>
-    <button class="modal-close is-large is-hidden" aria-label="close"></button>
+    <button class="modal-close is-large" aria-label="close"></button>
   </div>
 <section class="section">
     <noscript>
@@ -178,11 +178,11 @@
                                         </div>
                                         <div class="level-item">
                                         <button class="button is-info is-rounded mb-5" type="submit" id="submit_files">Submit <i class="fa fa-upload ml-1"></i></button>
-                                        </div>
+                                        <p class="Total_weight"></p>    
+                                    </div>
                                     </div>
                                 </form>
-                            
-                            <p class="Total_weight"></p>
+                        
                             
                         </div>
     
