--- a/views/home.ejs
+++ b/views/home.ejs
@@ -334,7 +334,7 @@ $('#upload_form').on('keyup keypress', function(e) {
              shadowMapEnabled: true,
             shadowMapSoft: true
         });
-        renderer.shadowMap.enabled = false;
+        renderer.shadowMap.enabled = true;
 
         var camera = new THREE.PerspectiveCamera(70, 1, 0.1, 8000);
         var cameraTarget = new THREE.Vector3(0,100,0);
@@ -351,8 +351,8 @@ $('#upload_form').on('keyup keypress', function(e) {
         directionalLight.castShadow = true;
         directionalLight.position.set(300, 400, 50);
         directionalLight.position.multiplyScalar(1.3);
-        directionalLight.shadow.mapSize.width = 512;
-        directionalLight.shadow.mapSize.height = 512;
+        directionalLight.shadow.mapSize.width = 2048*2;
+        directionalLight.shadow.mapSize.height= 2048*2;
 
         directionalLight.castShadow = true;
 
@@ -375,10 +375,15 @@ $('#upload_form').on('keyup keypress', function(e) {
             color: 0x555555
         })
         //img.map.needsUpdate = true; //ADDED
-        var ground = new THREE.Mesh(new THREE.PlaneGeometry(5000, 5000),new THREE.MeshBasicMaterial({color: 0x555555}) );
+
+        var planeGeometry = new THREE.PlaneBufferGeometry( 2000, 2000, 32, 32 );
+        var planeMaterial = new THREE.MeshStandardMaterial( { color: 0x555555 } )
+        var ground = new THREE.Mesh( planeGeometry, planeMaterial );
+
+        //var ground = new THREE.Mesh(new THREE.PlaneGeometry(5000, 5000),new THREE.MeshBasicMaterial({color: 0x555555}) );
         ground.name = "ground";
-        ground.rotation.x = Math.PI * -0.5;
-        ground.position.y=5
+        ground.rotation.x -= Math.PI/2;
+        ground.position.y=0
         ground.receiveShadow = true;
         ground.castShadow=false
         ground.visible=true
@@ -418,7 +423,7 @@ $('#upload_form').on('keyup keypress', function(e) {
                     }
                     var builder = new vox.MeshBuilder(vD, {
                         voxelSize: 1.0,
-                        vertexColor: false,
+                        vertexColor: true,
                         optimizeFaces: true,
                     });
                     b=null;
@@ -428,7 +433,7 @@ $('#upload_form').on('keyup keypress', function(e) {
 
                     //CREATE MESH
                     mesh.castShadow = true; //default is false
-                    mesh.position.y=8
+                    mesh.position.y=4
                     mesh.name="item"
                     mesh.scale.x=8
                     mesh.scale.y=8
